--- a/JUICE-CDF-HF-SID23_sample.ipynb
+++ b/JUICE-CDF-HF-SID23_sample.ipynb
@@ -451,69 +451,8 @@
     "            data.Eu_q[i][j] = signal.lfilter(filter, 1, data.Eu_q[i][j])\n",
     "            data.Ev_i[i][j] = signal.lfilter(filter, 1, data.Ev_i[i][j])\n",
     "            data.Ev_q[i][j] = signal.lfilter(filter, 1, data.Ev_q[i][j])\n",
-    "            data.Ew_i[i][j] = signal.lfilter(filter, 1, data.Ew_i[i][j])\n",
-    "            data.Ew_q[i][j] = signal.lfilter(filter, 1, data.Ew_q[i][j])\n",
-    "            \n",
-    "    \"\"\"\n",
-    "    x  = data.Eu_i[n_sweep][n_block]*data.Eu_i[n_sweep][n_block] + data.Eu_q[n_sweep][n_block]*data.Eu_q[n_sweep][n_block]\n",
-    "    t = data.time[0][0]\n",
-    "    dt = 1.0 / juice_cdf._sample_rate(data.decimation_AUX[0])\n",
-    "    N  = x.shape[0]                                             # N  = 3328\n",
-    "    F0 = np.fft.fft(x)\n",
-    "    Amp0 = np.abs(F0/(N/2))\n",
-    "\n",
-    "    # --- LPF: 40Hz ---\n",
-    "    filter1 = signal.firwin(numtaps=51, cutoff=40000, fs=1/dt)\n",
-    "    y1 = signal.lfilter(filter1, 1, x)\n",
-    "    F1 = np.fft.fft(y1)\n",
-    "    Amp1 = np.abs(F1/(N/2))\n",
-    "\n",
-    "    # --- HPF: 100Hz ---\n",
-    "    filter2 = signal.firwin(numtaps=51, cutoff=100000, fs=1/dt, pass_zero=False)\n",
-    "    y2 = signal.lfilter(filter2, 1, x)\n",
-    "    F2 = np.fft.fft(y2)\n",
-    "    Amp2 = np.abs(F2/(N/2))\n",
-    "\n",
-    "    # --- BandPath; 30-100Hz ---\n",
-    "    filter3 = signal.firwin(numtaps=51, cutoff=[30000, 100000], fs=1/dt, pass_zero=False)\n",
-    "    y3 = signal.lfilter(filter3, 1, x)\n",
-    "    F3 = np.fft.fft(y3)\n",
-    "    Amp3 = np.abs(F3/(N/2))\n",
-    "\n",
-    "    # --- Notch: 30-100Hz ---\n",
-    "    filter4 = signal.firwin(numtaps=51, cutoff=[30000, 100000], fs=1/dt)\n",
-    "    y4 = signal.lfilter(filter4, 1, x)\n",
-    "    F4 = np.fft.fft(y4)\n",
-    "    Amp4 = np.abs(F4/(N/2))\n",
-    "\n",
-    "    freq = np.fft.fftfreq(N, d=dt)\n",
-    "\n",
-    "    #\n",
-    "    # ---- TEST PLOT ----\n",
-    "    #    \n",
-    "    fig = plt.figure(figsize=(14, 16))\n",
-    "    ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
-    "    ax1.plot(t, x,  '-y', linewidth=2, label='org'); \n",
-    "    ax1.plot(t, y1, '-b', linewidth=.5, label='LPF'); \n",
-    "    ax1.plot(t, y2, '-r', linewidth=.5, label='HPF'); \n",
-    "    ax2.plot(t, x,  '-y', linewidth=2, label='org'); \n",
-    "    ax2.plot(t, y3, '-b', linewidth=.5, label='BPF'); \n",
-    "    ax2.plot(t, y3, '-r', linewidth=.5, label='NF'); \n",
-    "    ax3.plot(freq[0:int(N/2)], Amp0[0:int(N/2)], '-y', linewidth=2, label='org'); \n",
-    "    ax3.plot(freq[0:int(N/2)], Amp1[0:int(N/2)], '-b', linewidth=.5, label='LPF'); \n",
-    "    ax3.plot(freq[0:int(N/2)], Amp2[0:int(N/2)], '-r', linewidth=.5, label='HPF'); \n",
-    "    ax4.plot(freq[0:int(N/2)], Amp0[0:int(N/2)], '-y', linewidth=2, label='org'); \n",
-    "    ax4.plot(freq[0:int(N/2)], Amp3[0:int(N/2)], '-b', linewidth=.5, label='BPF'); \n",
-    "    ax4.plot(freq[0:int(N/2)], Amp4[0:int(N/2)], '-r', linewidth=.5, label='NF'); \n",
-    "    ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8)\n",
-    "    ax4.legend(loc='upper right', fontsize=8)\n",
-    "    ax3.set_yscale('log');  ax4.set_yscale('log')\n",
-    "    xlim=[0, t[N-1]];    ax1.set_xlim(xlim);  ax2.set_xlim(xlim)\n",
-    "    xlim=[freq[0], freq[int(N/2)-1]];  ax3.set_xlim(xlim);  ax4.set_xlim(xlim)\n",
-    "    fig.show\n",
-    "\n",
-    "    print(\"[time(sec)]\", t[0], t[N-1], dt,  \"  [frequency(Hz)]\", freq[0], freq[int(N/2)-1])\n",
-    "    \"\"\""
+    "            # data.Ew_i[i][j] = signal.lfilter(filter, 1, data.Ew_i[i][j])\n",
+    "            # data.Ew_q[i][j] = signal.lfilter(filter, 1, data.Ew_q[i][j])"
    ]
   },
   {
@@ -1011,25 +950,25 @@
     "ax9.set_xlabel(str_date)\n",
     "\n",
     "# Plot\n",
-    "p1 = ax1.pcolormesh(num_1d, spec.freq, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "p2 = ax2.pcolormesh(num_1d, spec.freq, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "p3 = ax3.pcolormesh(num_1d, spec.freq, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "p1 = ax1.pcolormesh(num_1d, spec.freq, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
+    "p2 = ax2.pcolormesh(num_1d, spec.freq, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
+    "p3 = ax3.pcolormesh(num_1d, spec.freq, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
     "p4 = ax4.pcolormesh(num_1d, spec.freq, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "p5 = ax5.pcolormesh(num_1d, spec.freq, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "p6 = ax6.pcolormesh(num_1d, spec.freq, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
-    "p7 = ax7.pcolormesh(num_1d, spec.freq, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "p8 = ax8.pcolormesh(num_1d, spec.freq, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "p9 = ax9.pcolormesh(num_1d, spec.freq, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "p7 = ax7.pcolormesh(num_1d, spec.freq, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "p8 = ax8.pcolormesh(num_1d, spec.freq, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "p9 = ax9.pcolormesh(num_1d, spec.freq, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
     "\n",
-    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
-    "pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp5 = fig2d.colorbar(p5, ax=ax5, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp6 = fig2d.colorbar(p6, ax=ax6, orientation=\"vertical\");  pp3.set_label(power_str)\n",
-    "pp7 = fig2d.colorbar(p7, ax=ax7, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "pp8 = fig2d.colorbar(p8, ax=ax8, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\");  pp3.set_label(power_str)\n",
+    "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
+    "pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\")\n",
+    "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\")\n",
+    "pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\")\n",
+    "pp5 = fig2d.colorbar(p5, ax=ax5, orientation=\"vertical\")\n",
+    "pp6 = fig2d.colorbar(p6, ax=ax6, orientation=\"vertical\")\n",
+    "pp7 = fig2d.colorbar(p7, ax=ax7, orientation=\"vertical\")\n",
+    "pp8 = fig2d.colorbar(p8, ax=ax8, orientation=\"vertical\")\n",
+    "pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\")\n",
     "\n",
     "# Plot\n",
     "plt.show\n",
@@ -1223,7 +1162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
