--- a/JUICE-CDF-HF-SID2_sp_mask.ipynb
+++ b/JUICE-CDF-HF-SID2_sp_mask.ipynb
@@ -5,7 +5,7 @@
    "id": "5ad0cc98",
    "metadata": {},
    "source": [
-    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/7/21"
+    "# JUICE RPWI HF SID2 (RAW): L1a Mask Formation -- 2024/7/26"
    ]
   },
   {
@@ -26,12 +26,13 @@
    "source": [
     "import sys\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors as colors\n",
+    "import math\n",
     "import copy\n",
     "import csv\n",
     "import datetime\n",
-    "import glob"
+    "import glob\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.colors as colors"
    ]
   },
   {
@@ -85,14 +86,16 @@
     "# *** CAL set ***\n",
     "band_mode = 0                           # [Power]     0: sum     1: /Hz\n",
     "unit_mode = 0                           # [Power]     0: raw     1: V＠ADC     2: V@HF    3: V@RWI\n",
-    "cal_mode  = 2                           # [Power]     0: background     1: CAL     2: all\n",
+    "cal_mode  = 1                           # [Power]     0: background     1: CAL     2: all\n",
     "\n",
     "# *** Unit set ***\n",
     "f_mode    = 1                           # [Frequency] 0: linear  1: log\n",
     "time_mode = 0                           # [Time]      0: Epoch   1: data number\n",
+    "gap_mode  = 0                           # [gap]       0: n/a     1: gap\n",
     "\n",
     "# *** Frenquency range in Linear ***\n",
     "f_mode_min = 3000;   f_mode_max = 10000\n",
+    "# f_mode_min = 80;  f_mode_max = 2068     # 80 - 2068 : as same as SID-4/20\n",
     "\n",
     "# *** Power range set ***\n",
     "p_raw_max = 7.0                         # background: 7.5   CAL: 10\n",
@@ -220,7 +223,7 @@
     "N_ch0 = data.U_selected[0] + data.V_selected[0] + data.W_selected[0]\n",
     "\n",
     "print(\"Ch:\", N_ch0, \"  (U:\", data.U_selected[0], \"  V:\", data.V_selected[0], \"  W:\", data.W_selected[0], \")\")\n",
-    "print(\"Num-samples:\", n_time0, \"   Num-Frequency:\", n_freq0, \"   Length:\", n_samp0)\n",
+    "print(\"data size:\", data.Eu_i.shape, \"  Num-samples:\", n_time0, \"  Num-Frequency:\", n_freq0, \"  Length:\", n_samp0)\n",
     "print(\"Frequency, width, step (kHz):\", f_min1,  \"-\", f_max1, data.freq_width[0][0][0], data.freq_step[0][0][0])\n",
     "print(\"Time-length:\", data.time[0][0][n_samp0-1], \"sec in 1-sweep\")"
    ]
@@ -446,12 +449,29 @@
     "f_min0  = freq_1d[0]; f_max0 = freq_1d[-1]\n",
     "\n",
     "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
-    "print(power_str, \"   EE:\",   spec.EE.shape,   \"   freq:\", freq_1d[0], \"-\", freq_1d[-1], \"kHz  (df =\", freq_width_1d[0], \"kHz)\" )\n",
-    "\n",
+    "print(power_str, \"   EE:\",   spec.EE.shape,   \"   freq:\", freq_1d[0], \"-\", freq_1d[-1], \"kHz  (df =\", freq_width_1d[0], \"kHz)\" )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a9f379b0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "EE_2d   = spec.EE.transpose();    EE_med   = np.median(spec.EE, axis=0); \n",
     "EuEu_2d = spec.EuEu.transpose();  EuEu_med = np.median(spec.EuEu, axis=0)\n",
     "EvEv_2d = spec.EvEv.transpose();  EvEv_med = np.median(spec.EvEv, axis=0)\n",
-    "EwEw_2d = spec.EwEw.transpose();  EwEw_med = np.median(spec.EwEw, axis=0)"
+    "EwEw_2d = spec.EwEw.transpose();  EwEw_med = np.median(spec.EwEw, axis=0)\n",
+    "E_DoLuv_2d = spec.E_DoLuv.transpose()\n",
+    "E_DoLvw_2d = spec.E_DoLvw.transpose()\n",
+    "E_DoLwu_2d = spec.E_DoLwu.transpose()\n",
+    "E_DoCuv_2d = spec.E_DoCuv.transpose()\n",
+    "E_DoCvw_2d = spec.E_DoCvw.transpose()\n",
+    "E_DoCwu_2d = spec.E_DoCwu.transpose()\n",
+    "E_ANGuv_2d = spec.E_ANGuv.transpose()\n",
+    "E_ANGvw_2d = spec.E_ANGvw.transpose()\n",
+    "E_ANGwu_2d = spec.E_ANGwu.transpose()"
    ]
   },
   {
@@ -489,17 +509,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "n_sweep = n_time0//2;  \n",
+    "n_sweep = n_time0//2\n",
     "print(f\"[SWEEP - {n_sweep}]\")\n",
     "peak_E = np.ravel(spec.EE  [n_sweep]); peak_f = np.argmax(peak_E); \n",
-    "print(\"Peak at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\")\n",
+    "print(\"Peak at\", '{:.1f}'.format(freq_1d[peak_f]), \"kHz\", peak_f)\n",
     "print(\"   EuEu:\", '{:+.2e}'.format(np.ravel(spec.EuEu[n_sweep])[peak_f]),    \"     EvEv:\", '{:+.2e}'.format(np.ravel(spec.EvEv[n_sweep])[peak_f]),    \"     EwEw:\", '{:+.2e}'.format(np.ravel(spec.EwEw[n_sweep])[peak_f]))\n",
     "print(\"EuEv_re:\", '{:+.2e}'.format(np.ravel(spec.EuEv_re[n_sweep])[peak_f]), \"  EvEw_re:\", '{:+.2e}'.format(np.ravel(spec.EvEw_re[n_sweep])[peak_f]), \"  EwEu_re:\", '{:+.2e}'.format(np.ravel(spec.EwEu_re[n_sweep])[peak_f]))\n",
     "print(\"EuEv_im:\", '{:+.2e}'.format(np.ravel(spec.EuEv_im[n_sweep])[peak_f]), \"  EvEw_im:\", '{:+.2e}'.format(np.ravel(spec.EvEw_im[n_sweep])[peak_f]), \"  EwEu_im:\", '{:+.2e}'.format(np.ravel(spec.EwEu_im[n_sweep])[peak_f]))\n",
     "print(\"\")\n",
     "print(\"  DoPuv:\", '{:+.2e}'.format(np.ravel(spec.E_DoPuv[n_sweep])[peak_f]), \"    DoLuv:\", '{:+.2e}'.format(np.ravel(spec.E_DoLuv[n_sweep])[peak_f]), \"    DoCuv:\", '{:+.2e}'.format(np.ravel(spec.E_DoCuv[n_sweep])[peak_f]), \"    ANGuv:\", '{:+.2e}'.format(np.ravel(spec.E_ANGuv[n_sweep])[peak_f]))\n",
     "print(\"  DoPvw:\", '{:+.2e}'.format(np.ravel(spec.E_DoPvw[n_sweep])[peak_f]), \"    DoLvw:\", '{:+.2e}'.format(np.ravel(spec.E_DoLvw[n_sweep])[peak_f]), \"    DoCvw:\", '{:+.2e}'.format(np.ravel(spec.E_DoCvw[n_sweep])[peak_f]), \"    ANGvw:\", '{:+.2e}'.format(np.ravel(spec.E_ANGvw[n_sweep])[peak_f]))\n",
-    "print(\"  DoPwu:\", '{:+.2e}'.format(np.ravel(spec.E_DoPwu[n_sweep])[peak_f]), \"    DoLwu:\", '{:+.2e}'.format(np.ravel(spec.E_DoLwu[n_sweep])[peak_f]), \"    DoCwu:\", '{:+.2e}'.format(np.ravel(spec.E_DoCwu[n_sweep])[peak_f]), \"    ANGwu:\", '{:+.2e}'.format(np.ravel(spec.E_ANGwu[n_sweep])[peak_f]))"
+    "print(\"  DoPwu:\", '{:+.2e}'.format(np.ravel(spec.E_DoPwu[n_sweep])[peak_f]), \"    DoLwu:\", '{:+.2e}'.format(np.ravel(spec.E_DoLwu[n_sweep])[peak_f]), \"    DoCwu:\", '{:+.2e}'.format(np.ravel(spec.E_DoCwu[n_sweep])[peak_f]), \"    ANGwu:\", '{:+.2e}'.format(np.ravel(spec.E_ANGwu[n_sweep])[peak_f]))\n",
+    "# UV\n",
+    "print('Stockes-UV: {:+.2e}'.format(np.ravel(spec.E_Iuv[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Quv[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Uuv[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Vuv[n_sweep])[peak_f]))\n",
+    "print('Stockes-VW: {:+.2e}'.format(np.ravel(spec.E_Ivw[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Qvw[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Uvw[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Vvw[n_sweep])[peak_f]))\n",
+    "print('Stockes-WU: {:+.2e}'.format(np.ravel(spec.E_Iwu[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Qwu[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Uwu[n_sweep])[peak_f]),   '{:+.2e}'.format(np.ravel(spec.E_Vwu[n_sweep])[peak_f]))"
    ]
   },
   {
@@ -513,6 +537,71 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ef4c336d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Sweep_num\n",
+    "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
+    "n_sweep1 = n_time0//4;  n_sweep2 = 3*n_time0//4;  n_sweep3 = n_time0-1\n",
+    "# n_sweep1 = 50; n_sweep2 = 1600;  n_sweep3 = 2000\n",
+    "# Y-range\n",
+    "p_min = p_min0;  p_max = p_max0+2.5\n",
+    "# X-range\n",
+    "f_min = f_min0;  f_max = f_max0\n",
+    "if f_mode == 0:\n",
+    "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
+    "\n",
+    "fig = plt.figure(figsize=(14, 18))\n",
+    "ax1 = fig.add_subplot(4, 1, 1);  ax2 = fig.add_subplot(4, 1, 2);  ax3 = fig.add_subplot(4, 1, 3);  ax4 = fig.add_subplot(4, 1, 4)\n",
+    "\n",
+    "ax1.plot(freq_1d, spec.EE  [n_sweep1], '-r', linewidth=.9, label='EE 1st')\n",
+    "ax1.plot(freq_1d, spec.EE  [n_sweep2], '-g', linewidth=.4, label='EE mid')\n",
+    "ax1.plot(freq_1d, spec.EE  [n_sweep3], '-b', linewidth=.2, label='EE last')\n",
+    "ax2.plot(freq_1d, spec.EuEu[n_sweep1], '-r', linewidth=.9, label='EuEu 1st')\n",
+    "ax2.plot(freq_1d, spec.EuEu[n_sweep2], '-g', linewidth=.4, label='EuEu mid')\n",
+    "ax2.plot(freq_1d, spec.EuEu[n_sweep3], '-b', linewidth=.2, label='EuEu last')\n",
+    "ax3.plot(freq_1d, spec.EvEv[n_sweep1], '-r', linewidth=.9, label='EvEv 1st')\n",
+    "ax3.plot(freq_1d, spec.EvEv[n_sweep2], '-g', linewidth=.4, label='EvEv mid')\n",
+    "ax3.plot(freq_1d, spec.EvEv[n_sweep3], '-b', linewidth=.2, label='EvEv last')\n",
+    "ax4.plot(freq_1d, spec.EwEw[n_sweep1], '-r', linewidth=.9, label='EwEw 1st')\n",
+    "ax4.plot(freq_1d, spec.EwEw[n_sweep2], '-g', linewidth=.4, label='EwEw mid')\n",
+    "ax4.plot(freq_1d, spec.EwEw[n_sweep3], '-b', linewidth=.2, label='EwEw last')\n",
+    "ax1.set_yscale('log');      ax2.set_yscale('log');  ax3.set_yscale('log');  ax4.set_yscale('log')\n",
+    "if f_mode == 1:\n",
+    "    ax1.set_xscale('log');  ax2.set_xscale('log');  ax3.set_xscale('log');  ax4.set_xscale('log')\n",
+    "\n",
+    "# Label\n",
+    "ax1.set_ylabel('EE');  ax2.set_ylabel('EuEu'); ax3.set_ylabel('EvEv'); ax4.set_ylabel('EwEw'); ax4.set_xlabel('Frequency [kHz]')\n",
+    "#\n",
+    "date1 = Epoch_1d[n_sweep1];  date1 = date1.strftime('1st: %Y/%m/%d %R:%S   ')\n",
+    "date2 = Epoch_1d[n_sweep2];  date2 = date2.strftime('Mid: %Y/%m/%d %R:%S   ')\n",
+    "date3 = Epoch_1d[n_sweep3];  date3 = date3.strftime('Fin: %Y/%m/%d %R:%S')\n",
+    "title_date = date1 + \"  -  \" + date2 + \"  -  \" + date3\n",
+    "ax1.set_title(title_date)\n",
+    "ax1.legend(loc='upper right', fontsize=8);  ax2.legend(loc='upper right', fontsize=8);  ax3.legend(loc='upper right', fontsize=8);   ax4.legend(loc='upper right', fontsize=8)\n",
+    "\n",
+    "# range: X-axis\n",
+    "xlim=[f_min, f_max]\n",
+    "# xlim=[8150, 8250]\n",
+    "ax1.set_xlim(xlim); ax2.set_xlim(xlim);  ax3.set_xlim(xlim); ax4.set_xlim(xlim)\n",
+    "\n",
+    "# range: Y-axis\n",
+    "ylim=[10**(p_min), 10**(p_max)]\n",
+    "ax1.set_ylim(ylim); ax2.set_ylim(ylim);  ax3.set_ylim(ylim); ax4.set_ylim(ylim)\n",
+    "\n",
+    "# Plot\n",
+    "fig.show\n",
+    "if dump_mode == 1:\n",
+    "    png_fname = work_dir+data_name+'_spec.png'\n",
+    "    if f_mode == 1:\n",
+    "        png_fname = work_dir+data_name+'_spec-log.png'\n",
+    "    fig.savefig(png_fname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e423b117",
    "metadata": {},
    "outputs": [],
@@ -521,7 +610,7 @@
     "n_sweep1 = 0;  n_sweep2 = n_time0//2;  n_sweep3 = n_time0-1\n",
     "n_sweep1 = n_time0//4;  n_sweep2 = 3*n_time0//4;  n_sweep3 = n_time0-1\n",
     "# Y-range\n",
-    "p_min = p_min0;   p_max = p_max0\n",
+    "p_min = p_min0;  p_max = p_max0+3\n",
     "# X-range\n",
     "f_min = f_min0;  f_max = f_max0\n",
     "if f_mode == 0:\n",
@@ -559,9 +648,9 @@
     "# Plot\n",
     "fig.show\n",
     "if dump_mode == 1:\n",
-    "    png_fname = work_dir+data_name+'_spec.png'\n",
+    "    png_fname = work_dir+data_name+'_spec-EE.png'\n",
     "    if f_mode == 1:\n",
-    "        png_fname = work_dir+data_name+'_spec-log.png'\n",
+    "        png_fname = work_dir+data_name+'_spec-EE-log.png'\n",
     "    fig.savefig(png_fname)"
    ]
   },
@@ -582,17 +671,15 @@
    "source": [
     "# Y-range\n",
     "f_min = f_min0;      f_max = f_max0\n",
-    "# f_min = 41900;      f_max = 42100\n",
     "if f_mode == 0:\n",
     "    f_min = f_mode_min;  f_max = f_mode_max;  print(data.frequency[0][0][0], data.frequency[0][8][0])\n",
     "# Z-range\n",
     "p_min  = p_min0;     p_max  = p_max0\n",
-    "#p_min  = p_min0+1.5;     p_max  = p_max0-2.5\n",
     "\n",
     "if time_mode == 1:\n",
-    "    fig2d = plt.figure(figsize=[14,12]);  ax1 = fig2d.add_subplot(2, 1, 1);  ax2 = fig2d.add_subplot(2, 1, 2);  ax2.set_xlabel(str_date)\n",
+    "    fig2d = plt.figure(figsize=[14,14]);  ax1 = fig2d.add_subplot(2, 1, 1);  ax2 = fig2d.add_subplot(2, 1, 2);  ax2.set_xlabel(str_date)\n",
     "else:\n",
-    "    fig2d = plt.figure(figsize=[14,8]);   ax1 = fig2d.add_subplot(1, 1, 1);                                     ax1.set_xlabel(str_date)\n",
+    "    fig2d = plt.figure(figsize=[14,10]);  ax1 = fig2d.add_subplot(1, 1, 1);                                     ax1.set_xlabel(str_date)\n",
     "\n",
     "# X-axis\n",
     "ax1.set_title('EE')\n",
@@ -610,7 +697,7 @@
     "    p2 = ax2.plot(np.ravel(spec.epoch[:]), '.')\n",
     "    pp1 = fig2d.colorbar(p1, ax=ax2, orientation=\"vertical\"); pp1.set_label(power_str)\n",
     "else:\n",
-    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d,   norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
+    "    p1 = ax1.pcolormesh(Epoch_1d, freq_1d, EE_2d, norm=colors.LogNorm(vmin=10**p_min, vmax=10**p_max), cmap='jet')\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\"); pp1.set_label(power_str)\n",
     "\n",
     "# range: X-axis\n",
