--- a/JUICE-CDF-HF-SID7_sample.ipynb
+++ b/JUICE-CDF-HF-SID7_sample.ipynb
@@ -570,7 +570,7 @@
     "fig2d = plt.figure(figsize=[12,8])\n",
     "ax1 = fig2d.add_subplot(1, 1, 1); \n",
     "\n",
-    "p1 = ax1.pcolormesh(num_1d, data.time, auto_corr_2d, cmap='jet')\n",
+    "p1 = ax1.pcolormesh(num_1d, data.time, auto_corr_2d, cmap='bwr')\n",
     "\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
     "\n",
