--- a/JUICE-CDF-HF-SID20_sample.ipynb
+++ b/JUICE-CDF-HF-SID20_sample.ipynb
@@ -787,27 +787,27 @@
     "\n",
     "# Plot\n",
     "if time_mode == 1:\n",
-    "    p1 = ax1.pcolormesh(num_1d, freq1, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "    p2 = ax2.pcolormesh(num_1d, freq1, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "    p3 = ax3.pcolormesh(num_1d, freq1, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p1 = ax1.pcolormesh(num_1d, freq1, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
+    "    p2 = ax2.pcolormesh(num_1d, freq1, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
+    "    p3 = ax3.pcolormesh(num_1d, freq1, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
     "    p4 = ax4.pcolormesh(num_1d, freq1, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "    p5 = ax5.pcolormesh(num_1d, freq1, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "    p6 = ax6.pcolormesh(num_1d, freq1, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
-    "    p7 = ax7.pcolormesh(num_1d, freq1, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "    p8 = ax8.pcolormesh(num_1d, freq1, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "    p9 = ax9.pcolormesh(num_1d, freq1, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "    p7 = ax7.pcolormesh(num_1d, freq1, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "    p8 = ax8.pcolormesh(num_1d, freq1, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "    p9 = ax9.pcolormesh(num_1d, freq1, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
     "    p10 = ax10.plot(np.ravel(Epoch_2d[:]), '.')\n",
     "    pp3 = fig2d.colorbar(p3, ax=ax10, orientation=\"vertical\"); pp3.set_label(power_str)\n",
     "else:\n",
-    "    p1 = ax1.pcolormesh(Epoch_2d, freq1, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "    p2 = ax2.pcolormesh(Epoch_2d, freq1, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "    p3 = ax3.pcolormesh(Epoch_2d, freq1, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "    p1 = ax1.pcolormesh(Epoch_2d, freq1, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
+    "    p2 = ax2.pcolormesh(Epoch_2d, freq1, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
+    "    p3 = ax3.pcolormesh(Epoch_2d, freq1, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
     "    p4 = ax4.pcolormesh(Epoch_2d, freq1, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "    p5 = ax5.pcolormesh(Epoch_2d, freq1, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "    p6 = ax6.pcolormesh(Epoch_2d, freq1, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
-    "    p7 = ax7.pcolormesh(Epoch_2d, freq1, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "    p8 = ax8.pcolormesh(Epoch_2d, freq1, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "    p9 = ax9.pcolormesh(Epoch_2d, freq1, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "    p7 = ax7.pcolormesh(Epoch_2d, freq1, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "    p8 = ax8.pcolormesh(Epoch_2d, freq1, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "    p9 = ax9.pcolormesh(Epoch_2d, freq1, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
     "pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\"); pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\")\n",
     "pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\"); pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\")\n",
     "pp5 = fig2d.colorbar(p5, ax=ax5, orientation=\"vertical\"); pp6 = fig2d.colorbar(p6, ax=ax6, orientation=\"vertical\")\n",
