--- a/JUICE-CDF-HF-SID3_sample.ipynb
+++ b/JUICE-CDF-HF-SID3_sample.ipynb
@@ -25,12 +25,13 @@
    "source": [
     "import sys\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors as colors\n",
+    "import math\n",
     "import copy\n",
     "import csv\n",
     "import datetime\n",
-    "import glob"
+    "import glob\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.colors as colors"
    ]
   },
   {
@@ -441,7 +442,6 @@
    "outputs": [],
    "source": [
     "data = juice_sid3.hf_sid3_shaping(data)\n",
-    "\n",
     "date1 = data.epoch[0];  date1 = date1.strftime('%Y/%m/%d %R:%S')\n",
     "date2 = data.epoch[-1]; date2 = date2.strftime('%Y/%m/%d %R:%S')\n",
     "str_date = date1 + \"  -  \" + date2;  print(str_date)\n",
@@ -495,75 +495,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "51c62a47",
-   "metadata": {},
-   "source": [
-    "### NaN"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6fabe9f5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import math\n",
-    "if gap_mode == 1:\n",
-    "    for i in range(n_time0-1):\n",
-    "        if data.scet[i+1]-data.scet[i] > 60:\n",
-    "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
-    "            data.EuEu[i]    = math.nan;  data.EvEv[i]    = math.nan;  data.EwEw[i]    = math.nan;  data.EuEu[i+1] = math.nan;     data.EvEv[i+1] = math.nan;     data.EwEw[i+1] = math.nan  \n",
-    "            data.E_DoLuv[i] = math.nan;  data.E_DoLvw[i] = math.nan;  data.E_DoLwu[i] = math.nan;  data.E_DoLuv[i+1] = math.nan;  data.E_DoLvw[i+1] = math.nan;  data.E_DoLwu[i+1] = math.nan; \n",
-    "            data.E_DoCuv[i] = math.nan;  data.E_DoCvw[i] = math.nan;  data.E_DoCwu[i] = math.nan;  data.E_DoCuv[i+1] = math.nan;  data.E_DoCvw[i+1] = math.nan;  data.E_DoCwu[i+1] = math.nan;           \n",
-    "            data.E_ANGuv[i] = math.nan;  data.E_ANGvw[i] = math.nan;  data.E_ANGwu[i] = math.nan;  data.E_ANGuv[i+1] = math.nan;  data.E_ANGvw[i+1] = math.nan;  data.E_ANGwu[i+1] = math.nan;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Data for checks"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Epoch_1d       = data.epoch.tolist()\n",
-    "freq_1d        = data.frequency[0].tolist()\n",
-    "freq1          = freq_1d[0:N_frequency]\n",
-    "freq_width_1d  = data.freq_width[0].tolist()\n",
-    "freq_width1    = freq_width_1d[0:N_frequency]\n",
-    "\n",
-    "EuEu_2d = data.EuEu.transpose();  EvEv_2d = data.EvEv.transpose();  EwEw_2d = data.EwEw.transpose()\n",
-    "if comp_mode > 0:    # Matrix\n",
-    "    E_DoLuv_2d = data.E_DoLuv.transpose();  E_DoLvw_2d = data.E_DoLvw.transpose();  E_DoLwu_2d = data.E_DoLwu.transpose()\n",
-    "    E_DoCuv_2d = data.E_DoCuv.transpose();  E_DoCvw_2d = data.E_DoCvw.transpose();  E_DoCwu_2d = data.E_DoCwu.transpose()\n",
-    "    E_ANGuv_2d = data.E_ANGuv.transpose();  E_ANGvw_2d = data.E_ANGvw.transpose();  E_ANGwu_2d = data.E_ANGwu.transpose()\n",
-    "freq_width_2d  = data.freq_width.transpose()\n",
-    "\"\"\"\n",
-    "if band_mode == 1:\n",
-    "    EuEu_2d = EuEu_2d/freq_width_2d/1000\n",
-    "    EvEv_2d = EvEv_2d/freq_width_2d/1000\n",
-    "    EwEw_2d = EwEw_2d/freq_width_2d/1000\n",
-    "    print(\"frequency width:\", freq_width1)\n",
-    "\"\"\"#\n",
-    "f_min0 = freq_1d[0]\n",
-    "f_max0 = freq_1d[N_frequency-1]\n",
-    "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
-    "print(power_str, \"   f_MAX/min:\", f_max0, f_min0)\n",
-    "# print(freq1); print(freq_width1)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "bee456fd",
    "metadata": {},
    "source": [
-    "## CAL Waveform"
+    "### CAL Waveform"
    ]
   },
   {
@@ -573,9 +508,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# *** Conversion factor: cal_mode ***\n",
+    "# *** Conversion factor: waveform ***\n",
     "cf, p_max0, p_min0, str_unit = juice_cdf.cal_factors(unit_mode, p_raw_max, p_raw_min)\n",
     "print(\"conversion factor:\", cf, \"    MAX-min:\", p_max0, p_min0, \"   str_unit:\", str_unit)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "825c1380",
+   "metadata": {},
+   "source": [
+    "### CAL Spectrum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "549f3246",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# *** Conversion factor: spec *** "
    ]
   },
   {
@@ -594,12 +547,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"Peak EuEu:\", '{:.2e}'.format(np.nanmax(data.EuEu)))\n",
+    "print(\"Peak EvEv:\", '{:.2e}'.format(np.nanmax(data.EvEv)))\n",
+    "print(\"Peak EwEw:\", '{:.2e}'.format(np.nanmax(data.EwEw)))\n",
     "p_max = np.ceil(np.log10( np.nanmax( [np.amax(data.EuEv_re), np.nanmax(data.EvEw_re), np.nanmax(data.EwEu_re), np.nanmax(data.EuEv_im), np.nanmax(data.EvEw_im), np.nanmax(data.EwEu_im)] ) )*5)/5\n",
     "print(\"  p_max:\", p_max)\n",
-    "nan = float('NaN')\n",
-    "if math.isnan(p_max):\n",
-    "    p_max = p_raw_max\n",
-    "print(\"  p_max:\", p_max)"
+    "print(\"Temp HF-FPGA:\", data.T_HF_FPGA[n_time0//2],  \"  RWI-CH1:\", data.T_RWI_CH1[n_time0//2],  \"  RWI-CH2:\", data.T_RWI_CH2[n_time0//2])"
    ]
   },
   {
@@ -698,7 +651,9 @@
     "    ax6.plot(np.ravel(data.E_ANGwu_NC), '-b', linewidth=0.6, label='wu')\n",
     "\"\"\"\n",
     "\n",
-    "ax1.set_ylabel(power_str);  ax8.set_ylabel('T [degC]');   ax9.set_ylabel('Date-Time')\n",
+    "# ax1.set_ylabel(power_str);  \n",
+    "ax1.set_ylabel(str_unit);\n",
+    "ax8.set_ylabel('T [degC]');   ax9.set_ylabel('Date-Time')\n",
     "ax8.set_xlabel(str_date)\n",
     "if comp_mode > 0:    # Matrix\n",
     "    ax2.set_ylabel('Real & Img');          ax3.set_ylabel('Deg. Pol.');    ax4.set_ylabel('Deg. Linear Pol.')\n",
@@ -745,6 +700,47 @@
     "print(data.onboard_cal)\n",
     "print(data.Pol_sep_SW)\n",
     "print(data.cal_signal)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e05c14d6",
+   "metadata": {},
+   "source": [
+    "# Data for checks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d2472ca9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Epoch_1d       = data.epoch.tolist()\n",
+    "freq_1d        = data.frequency[0].tolist()\n",
+    "freq1          = freq_1d[0:N_frequency]\n",
+    "freq_width_1d  = data.freq_width[0].tolist()\n",
+    "freq_width1    = freq_width_1d[0:N_frequency]\n",
+    "\n",
+    "EuEu_2d = data.EuEu.transpose();  EvEv_2d = data.EvEv.transpose();  EwEw_2d = data.EwEw.transpose()\n",
+    "if comp_mode > 0:    # Matrix\n",
+    "    E_DoLuv_2d = data.E_DoLuv.transpose();  E_DoLvw_2d = data.E_DoLvw.transpose();  E_DoLwu_2d = data.E_DoLwu.transpose()\n",
+    "    E_DoCuv_2d = data.E_DoCuv.transpose();  E_DoCvw_2d = data.E_DoCvw.transpose();  E_DoCwu_2d = data.E_DoCwu.transpose()\n",
+    "    E_ANGuv_2d = data.E_ANGuv.transpose();  E_ANGvw_2d = data.E_ANGvw.transpose();  E_ANGwu_2d = data.E_ANGwu.transpose()\n",
+    "freq_width_2d  = data.freq_width.transpose()\n",
+    "\"\"\"\n",
+    "if band_mode == 1:\n",
+    "    EuEu_2d = EuEu_2d/freq_width_2d/1000\n",
+    "    EvEv_2d = EvEv_2d/freq_width_2d/1000\n",
+    "    EwEw_2d = EwEw_2d/freq_width_2d/1000\n",
+    "    print(\"frequency width:\", freq_width1)\n",
+    "\"\"\"#\n",
+    "f_min0 = freq_1d[0]\n",
+    "f_max0 = freq_1d[N_frequency-1]\n",
+    "power_str = juice_cdf.power_label(band_mode, unit_mode)\n",
+    "print(power_str, \"   f_MAX/min:\", f_max0, f_min0)\n",
+    "# print(freq1); print(freq_width1)"
    ]
   },
   {
@@ -818,6 +814,32 @@
     "    # print(i, data.complex[i], '[l] {:+.2e}'.format(data.EuEu_NC[i][peak_f]), 'DoP:{:+.2e}'.format(data.E_DoPuv_NC[i][peak_f]), 'DoL:{:+.2e}'.format(data.E_DoLuv_NC[i][peak_f]), 'DoC:{:+.2e}'.format(data.E_DoCuv_NC[i][peak_f]), 'ang:{:+.2e}'.format(data.E_ANGuv_NC[i][peak_f]))\n",
     "    # print(i, data.complex[i], '[R] {:+.2e}'.format(data.EuEu_RC[i][peak_f]), 'DoP:{:+.2e}'.format(data.E_DoPuv_RC[i][peak_f]), 'DoL:{:+.2e}'.format(data.E_DoLuv_RC[i][peak_f]), 'DoC:{:+.2e}'.format(data.E_DoCuv_RC[i][peak_f]), 'ang:{:+.2e}'.format(data.E_ANGuv_RC[i][peak_f]))\n",
     "    # print(i, data.complex[i], '[L] {:+.2e}'.format(data.EuEu_LC[i][peak_f]), 'DoP:{:+.2e}'.format(data.E_DoPuv_LC[i][peak_f]), 'DoL:{:+.2e}'.format(data.E_DoLuv_LC[i][peak_f]), 'DoC:{:+.2e}'.format(data.E_DoCuv_LC[i][peak_f]), 'ang:{:+.2e}'.format(data.E_ANGuv_LC[i][peak_f]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51c62a47",
+   "metadata": {},
+   "source": [
+    "### NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6fabe9f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math\n",
+    "if gap_mode == 1:\n",
+    "    for i in range(n_time0-1):\n",
+    "        if data.scet[i+1]-data.scet[i] > 60:\n",
+    "            print(i, data.epoch[i], i+1, data.epoch[i+1])\n",
+    "            data.EuEu[i]    = math.nan;  data.EvEv[i]    = math.nan;  data.EwEw[i]    = math.nan;  data.EuEu[i+1] = math.nan;     data.EvEv[i+1] = math.nan;     data.EwEw[i+1] = math.nan  \n",
+    "            data.E_DoLuv[i] = math.nan;  data.E_DoLvw[i] = math.nan;  data.E_DoLwu[i] = math.nan;  data.E_DoLuv[i+1] = math.nan;  data.E_DoLvw[i+1] = math.nan;  data.E_DoLwu[i+1] = math.nan; \n",
+    "            data.E_DoCuv[i] = math.nan;  data.E_DoCvw[i] = math.nan;  data.E_DoCwu[i] = math.nan;  data.E_DoCuv[i+1] = math.nan;  data.E_DoCvw[i+1] = math.nan;  data.E_DoCwu[i+1] = math.nan;           \n",
+    "            data.E_ANGuv[i] = math.nan;  data.E_ANGvw[i] = math.nan;  data.E_ANGwu[i] = math.nan;  data.E_ANGuv[i+1] = math.nan;  data.E_ANGvw[i+1] = math.nan;  data.E_ANGwu[i+1] = math.nan;"
    ]
   },
   {
@@ -1115,37 +1137,37 @@
     "\n",
     "    # Plot\n",
     "    if time_mode == 1:\n",
-    "        p1 = ax1.pcolormesh(num_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "        p2 = ax2.pcolormesh(num_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "        p3 = ax3.pcolormesh(num_1d, freq_1d, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "        p1 = ax1.pcolormesh(num_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
+    "        p2 = ax2.pcolormesh(num_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
+    "        p3 = ax3.pcolormesh(num_1d, freq_1d, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
     "        p4 = ax4.pcolormesh(num_1d, freq_1d, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "        p5 = ax5.pcolormesh(num_1d, freq_1d, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "        p6 = ax6.pcolormesh(num_1d, freq_1d, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
-    "        p7 = ax7.pcolormesh(num_1d, freq_1d, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "        p8 = ax8.pcolormesh(num_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "        p9 = ax9.pcolormesh(num_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
+    "        p7 = ax7.pcolormesh(num_1d, freq_1d, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "        p8 = ax8.pcolormesh(num_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "        p9 = ax9.pcolormesh(num_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
     "        p10 = ax10.plot(np.ravel(data.epoch[:]), '.')\n",
     "        pp9 = fig2d.colorbar(p9, ax=ax10, orientation=\"vertical\"); pp9.set_label(power_str)\n",
     "    else:\n",
-    "        p1 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "        p2 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
-    "        p3 = ax3.pcolormesh(Epoch_1d, freq_1d, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='Oranges')\n",
+    "        p1 = ax1.pcolormesh(Epoch_1d, freq_1d, E_DoLuv_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
+    "        p2 = ax2.pcolormesh(Epoch_1d, freq_1d, E_DoLvw_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
+    "        p3 = ax3.pcolormesh(Epoch_1d, freq_1d, E_DoLwu_2d, norm=colors.Normalize(vmin=-0.01, vmax=1.01), cmap='jet')\n",
     "        p4 = ax4.pcolormesh(Epoch_1d, freq_1d, E_DoCuv_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "        p5 = ax5.pcolormesh(Epoch_1d, freq_1d, E_DoCvw_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
     "        p6 = ax6.pcolormesh(Epoch_1d, freq_1d, E_DoCwu_2d, norm=colors.Normalize(vmin=-1.01, vmax=1.01), cmap='bwr')\n",
-    "        p7 = ax7.pcolormesh(Epoch_1d, freq_1d, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "        p8 = ax8.pcolormesh(Epoch_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "        p9 = ax9.pcolormesh(Epoch_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='bwr')\n",
-    "    pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "    pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "    pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\");  pp3.set_label(power_str)\n",
-    "    pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "    pp5 = fig2d.colorbar(p5, ax=ax5, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "    pp6 = fig2d.colorbar(p6, ax=ax6, orientation=\"vertical\");  pp3.set_label(power_str)\n",
-    "    pp7 = fig2d.colorbar(p7, ax=ax7, orientation=\"vertical\");  pp1.set_label(power_str)\n",
-    "    pp8 = fig2d.colorbar(p8, ax=ax8, orientation=\"vertical\");  pp2.set_label(power_str)\n",
-    "    pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\");  pp3.set_label(power_str)\n",
-    "\n",
+    "        p7 = ax7.pcolormesh(Epoch_1d, freq_1d, E_ANGuv_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "        p8 = ax8.pcolormesh(Epoch_1d, freq_1d, E_ANGvw_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "        p9 = ax9.pcolormesh(Epoch_1d, freq_1d, E_ANGwu_2d, norm=colors.Normalize(vmin=-1.00, vmax=181.), cmap='hsv')\n",
+    "    pp1 = fig2d.colorbar(p1, ax=ax1, orientation=\"vertical\")\n",
+    "    pp2 = fig2d.colorbar(p2, ax=ax2, orientation=\"vertical\")\n",
+    "    pp3 = fig2d.colorbar(p3, ax=ax3, orientation=\"vertical\")\n",
+    "    pp4 = fig2d.colorbar(p4, ax=ax4, orientation=\"vertical\")\n",
+    "    pp5 = fig2d.colorbar(p5, ax=ax5, orientation=\"vertical\")\n",
+    "    pp6 = fig2d.colorbar(p6, ax=ax6, orientation=\"vertical\")\n",
+    "    pp7 = fig2d.colorbar(p7, ax=ax7, orientation=\"vertical\")\n",
+    "    pp8 = fig2d.colorbar(p8, ax=ax8, orientation=\"vertical\")\n",
+    "    pp9 = fig2d.colorbar(p9, ax=ax9, orientation=\"vertical\")\n",
+    "    \n",
     "    # X-axis\n",
     "    if time_mode == 1:\n",
     "        xlim=[num_1d[0], num_1d[-1]]\n",
